# sdk-nrf-otdoa

doc/nrf/libraries/otdoa_al/: index.md  index.rst  otdoa_data_flow.md  otdoa_data_flow.rst  otdoa_firmware.md  otdoa_firmware.rst  otdoa_overview.rst  phywi_api.md  phywi_api.rst  resource_usage.md  resource_usage.rst
ext/: CMakeLists.txt
include/modem/: location.h
include/otdoa_al/: otdoa_al_log.h  otdoa_fs.h  otdoa_http.h  otdoa_log.h  otdoa_nordic_at_h1.h  otdoa_shell.h  phywi_al2otdoa_api.h  phywi_al_api.h  phywi_otdoa2al_api.h  phywi_otdoa_api.h
lib/: CMakeLists.txt  Kconfig
lib/location/: CMakeLists.txt  Kconfig  location.c  location_core.c  location_core.h  method_otdoa.c  method_otdoa.h
lib/otdoa_al/: CMakeLists.txt  Kconfig  LICENSE  otdoa_al_log.h  otdoa_fat_fs.c  otdoa_fs.c  otdoa_http.c  otdoa_http.h  otdoa_http_api.c  otdoa_http_h1.c  otdoa_http_h1.h  otdoa_log.c  otdoa_nordic_at_h1.c  otdoa_shell.c  otdoa_thread.c  otdoa_thread_http.c  otdoa_thread_nordic_at.c  otdoa_timers.c
lib/otdoa_al/cert/: hellaphy_cloud
samples/cellular/modem_shell/: CMakeLists.txt  overlay-location_otdoa.conf
samples/cellular/modem_shell/src/location/: location_shell.c
samples/cellular/otdoa/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/cellular/otdoa/boards/: nrf9161dk_nrf9161_ns.overlay  nrf9161dk_nrf9161_ns_0_7_0.overlay  thingy91x_nrf9151_ns.overlay
samples/cellular/otdoa/include/: otdoa_gpio.h  otdoa_little_fs.h  otdoa_sample_app.h
samples/cellular/otdoa/src/: main.c  otdoa_gpio.c  otdoa_little_fs.c  otdoa_sample_app.c  otdoa_shell.c
samples/cellular/otdoa_sample/: CMakeLists.txt  pm_static.yml
